--- a/Project/package.json
+++ b/Project/package.json
@@ -11,8 +11,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "i": "^0.3.6",
+    "moment": "^2.29.1",
     "npm": "^7.22.0",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.35.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
